--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/ofthekings12/iss_spotter#readme",
   "devDependencies": {
     "request": "^2.88.2"
+  },
+  "dependencies": {
+    "request-promise-native": "^1.0.9"
   }
 }
